worker_8080_err.txt
SyntaxError: Expected property name or '}' in JSON at position 1
    at JSON.parse (<anonymous>)
    at parse (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1696:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
SyntaxError: Expected property name or '}' in JSON at position 1
    at JSON.parse (<anonymous>)
    at parse (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1696:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
SyntaxError: Unexpected token '%', "%JSON% 
" is not valid JSON
    at JSON.parse (<anonymous>)
    at createStrictSyntaxError (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:169:10)
    at parse (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:86:15)
    at C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1696:12)
SyntaxError: Expected property name or '}' in JSON at position 1
    at JSON.parse (<anonymous>)
    at parse (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1696:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
SyntaxError: Expected property name or '}' in JSON at position 1
    at JSON.parse (<anonymous>)
    at parse (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\types\json.js:92:19)
    at C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\body-parser\lib\read.js:128:18
    at AsyncResource.runInAsyncScope (node:async_hooks:206:9)
    at invokeCallback (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:238:16)
    at done (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:227:7)
    at IncomingMessage.onEnd (C:\Users\danie\CascadeProjects\windsurf-project\worker\node_modules\raw-body\index.js:287:7)
    at IncomingMessage.emit (node:events:519:28)
    at endReadableNT (node:internal/streams/readable:1696:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:82:21)
node:internal/modules/esm/resolve:854
  throw new ERR_MODULE_NOT_FOUND(packageName, fileURLToPath(base), null);
        ^

Error [ERR_MODULE_NOT_FOUND]: Cannot find package 'tus-js-client' imported from C:\Users\danie\CascadeProjects\windsurf-project\worker\dist\ingest.js
    at packageResolve (node:internal/modules/esm/resolve:854:9)
    at moduleResolve (node:internal/modules/esm/resolve:927:18)
    at defaultResolve (node:internal/modules/esm/resolve:1157:11)
    at ModuleLoader.defaultResolve (node:internal/modules/esm/loader:383:12)
    at ModuleLoader.resolve (node:internal/modules/esm/loader:352:25)
    at ModuleLoader.getModuleJob (node:internal/modules/esm/loader:227:38)
    at ModuleWrap.<anonymous> (node:internal/modules/esm/module_job:87:39)
    at link (node:internal/modules/esm/module_job:86:36) {
  code: 'ERR_MODULE_NOT_FOUND'
}

Node.js v20.14.0
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
[worker] yt-dlp retry with web client due to app gate { jobId: 'ing_mek3lckk_2l1egz' }
[worker] Ingest failed {
  jobId: 'ing_mek3lckk_2l1egz',
  error: 'yt-dlp failed after retry: ERROR: [youtube] ZNBWlT2zvW4: The following content is not available on this app.. Watch on the latest version of YouTube.\n'
}
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
STARTUP_GUARD: YT_DLP_PATH is not set. Continuing to start server so health checks work; ingest will fail without it.
STARTUP_GUARD: YT_DLP_PATH is not set. Continuing to start server so health checks work; ingest will fail without it.
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
STARTUP_GUARD: YT_DLP_PATH is not set. Continuing to start server so health checks work; ingest will fail without it.
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
STARTUP_GUARD: YT_DLP_PATH is not set. Continuing to start server so health checks work; ingest will fail without it.
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
SERVER_LISTEN_ERROR Error: listen EADDRINUSE: address already in use 0.0.0.0:8080
    at Server.setupListenHandle [as _listen2] (node:net:1898:16)
    at listenInCluster (node:net:1946:12)
    at doListen (node:net:2116:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:83:21)
